# haskell-bekk-2022

./: Plan.md
aoc-template/: CHANGELOG.md  README.md  aoc-template.cabal
aoc-template/app/: Day01.hs  Day01Solution.hs  Main.hs
fp-algo/: Notes.md
gadts/: DataKinds.hs  GADTs copy.hs  Oppgaver.hs  Oppgaver1.hs  Oppgaver2.hs
monadtrans/: CHANGELOG.md  README.md  monadtrans.cabal  package.yaml
monadtrans/.stack-work/: stack.sqlite3
monadtrans/.stack-work/ghci/270541ab/: cabal_macros.h
monadtrans/.stack-work/ghci/b42eeca3/: cabal_macros.h
monadtrans/src/: Main.hs
monadtrans/src/SR/: Main.hs
monadtrans/src/State/: Main.hs
monadtrans/src/Trans/: Fasit.hs  Main.hs
mote-1/: Intro.md  Oppgaver-fasit.md  TypedHole.hs
mote-2/: Oppgaver.hs  Oppgaver.md  Plan.hs  Plan.md
mote-3/: Fasit.hs  Monoids.hs  Oppgaver.hs  Plan-etter-motet.hs  Plan.hs
mote-4/: Fasit.hs  FasitExtra.hs  Functor.hs  Main.hs  Oppgaver.hs  OppgaverEkstra.hs  README.md
mote-5/: DoOppgaver.hs  IoOppgaver.hs  IoOppgaverFasit.hs  MonadNotes.md  MonadOppgaver.hs  Plan.hs  README.md  StateOppgaver.hs
overloaded-strings/: CHANGELOG.md  README.md  overloaded-strings.cabal  package.yaml
overloaded-strings/.stack-work/: stack.sqlite3
overloaded-strings/.stack-work/ghci/e84a9a66/: cabal_macros.h
overloaded-strings/src/: Main.hs
ressurser/: StartRessurser.md
setup/: Example.hs  README.md
typefams/: AssociatedTypes.hs  Intro.hs  README.md  Refl.hs  Revisit.hs
typefams/org/: AssociatedTypes.hs  Intro.hs  Refl.hs  Revisit.hs
